--- a/trafic-cop-status/new-contact-page.html
+++ b/trafic-cop-status/new-contact-page.html
@@ -173,75 +173,75 @@
                 <span>Profile Picture</span>
                 <img src="img/profile-picture.png" alt="">
             </div>
-            <form name="Salutation" class="Salutation">
+            <div class="input-container" name="Salutation" class="Salutation">
                 <label for="Salutation">Salutation</label>
                 <select name="Salutation" id="Salutation">
                     <option value="">Mr.</option>
                     <option value="">Ms.</option>
                 </select>
-            </form>
+            </div>
             <div class="input-form-name">
-                <form>
+                <div class="input-container">
                     <label for="firstName">First Name</label><input value="Chris" id="firstName" type="text"
                                                                     class="firstName">
-                </form>
-                <form>
+                </div>
+                <div class="input-container">
                     <label for="lastName">Last Name</label><input value="Toomey" id="lastName" type="text"
                                                                   class="lastName">
-                </form>
+                </div>
             </div>
         </div>
         <div class=" row company">
             <h6>Company</h6>
-            <form action="">
+            <div class="input-container" action="">
                 <label for="companyName">Company Name</label>
                 <input style="background-image:url(img/ParamountStudioLogo.png);" value="Paramount Studios"
                        id="companyName" type="text" class="companyName">
-            </form>
+            </div>
             <button class="add create-invoice upl-img">Upload Image</button>
-            <form>
+            <div class="input-container">
                 <label for="salesRepresentative">Sales Representative</label>
                 <select style="background-image:url(img/selectface.png);" name="salesRepresentative"
                         id="salesRepresentative">
                     <option value="">Jonas Hanlin</option>
                     <option value="">Jonas Hanlin</option>
                 </select>
-            </form>
-            <form>
+            </div>
+            <div class="input-container">
                 <label for="contactEmail">Contact E-mail</label><input id="contactEmail" type="text"
                                                                        class="contactEmail">
-            </form>
+            </div>
         </div>
         <div class="row phoneAndWebsite brdb">
             <h6>Phone and website</h6>
-            <form>
+            <div class="input-container">
                 <label for="workPhone">Work Phone</label><input id="workPhone" type="text" class="workPhone">
-            </form>
-            <form>
+            </div>
+            <div class="input-container">
                 <label for="Mobile">Mobile</label><input id="Mobile" type="text" class="Mobile">
-            </form>
+            </div>
             <a class="Add-fields" href="#"><span>+</span>Add fields</a>
-            <form>
+            <div class="input-container">
                 <label for="Website">Website</label><input id="Website" value="paramountstudios.com" type="text"
                                                            class="Website">
-            </form>
+            </div>
             <div class="ContactType">
                 <h6>Contact Type</h6>
-                <form>
+                <div class="input-container">
                     <input name="contactType" id="customer" type="radio"> <label for="customer">Customer</label>
                     <input name="contactType" id="vendor" type="radio"><label for="vendor">Vendor</label>
-                </form>
+                </div>
             </div>
         </div>
         <div class="row customer-service">
             <h6>Customer Service Represenative</h6>
-            <form>
+            <div class="input-container">
                 <label for="CSR">CSR</label>
                 <select style="background-image:url(img/selectface.png);" name="CSR" id="CSR">
                     <option value="">Christopher Furera</option>
                     <option value="">Jonas Hanlin</option>
                 </select>
-            </form>
+            </div>
         </div>
 
         <div class="row">
@@ -255,43 +255,43 @@
             <div class="new-contact-info">
                 <div class="tax-payment-details">
                     <h6>Tax Preference</h6>
-                    <form class="ContactType TaxPreference">
+                    <div class="input-container ContactType TaxPreference">
                         <input name="TaxPreference" id="Taxable" type="radio"> <label for="Taxable">Taxable</label>
                         <input name="TaxPreference" id="TaxExempt" type="radio"><label for="TaxExempt">Tax
                         Exempt</label>
-                    </form>
+                    </div>
                     <div class="half-width-form">
                         <div class="TaxRate">
                             <h6>Tax Rate</h6>
-                            <form>
+                            <div class="input-container">
                                 <label for="selectTax">Select a Tax</label>
                                 <select name="selectTax" id="selectTax">
                                     <option value="">California State Tax (7.25%)</option>
                                     <option value="">California State Tax (7.25%)2</option>
                                 </select>
-                            </form>
-                            <form>
+                            </div>
+                            <div class="input-container">
                                 <label for="paymentForm">Payment Form</label>
                                 <select name="paymentForm" id="paymentForm">
                                     <option value="">Credit Card</option>
                                     <option value="">Credit Card 2</option>
                                 </select>
-                            </form>
-                            <form>
+                            </div>
+                            <div class="input-container">
                                 <label for="paymentTerms">Payment Terms</label>
                                 <select name="paymentTerms" id="paymentTerms">
                                     <option value="">C.O.D</option>
                                     <option value="">C.O.D2</option>
                                 </select>
-                            </form>
+                            </div>
                         </div>
                         <h6>Social Media </h6>
-                        <form>
+                        <div class="input-container">
                             <label for="Linkedin">Linkedin</label><input id="Linkedin" type="text" class="Linkedin">
-                        </form>
-                        <form>
+                        </div>
+                        <div class="input-container">
                             <label for="Facebook">Mobile</label><input id="Facebook" type="text" class="Facebook">
-                        </form>
+                        </div>
                     </div>
                 </div>
                 <div class="Address hide">No have design</div>
