--- a/trafic-cop-status/dashboard-click-folder.html
+++ b/trafic-cop-status/dashboard-click-folder.html
@@ -46,7 +46,7 @@
                 <img src="img/1.png" alt="">Files
                 <div class="folder-qty">30</div>
             </a>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <ul>
                     <li><img src="img/all-format.png" alt="">All formats <input type="checkbox"></li>
                     <li><img src="img/photos.png" alt="">Photos <input type="checkbox"></li>
